--- a/node-and-fastify/package.json
+++ b/node-and-fastify/package.json
@@ -4,17 +4,19 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev:server": "tsx watch src/server.ts"
+    "dev:server": "ts-node src/server.ts"
   },
   "devDependencies": {
     "@types/node": "^18.11.19",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "eslint": "^8.33.0",
-    "tsx": "^3.12.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "fastify": "^4.12.0"
+    "fastify": "^4.12.0",
+    "knex": "^2.4.2",
+    "pg": "^8.9.0"
   }
 }
