--- a/node-and-fastify/package.json
+++ b/node-and-fastify/package.json
@@ -15,8 +15,10 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "fastify": "^4.12.0",
     "knex": "^2.4.2",
-    "pg": "^8.9.0"
+    "pg": "^8.9.0",
+    "zod": "^3.20.5"
   }
 }
