--- a/node-and-fastify/package.json
+++ b/node-and-fastify/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev:server": "ts-node src/server.ts"
+    "dev:server": "ts-node-dev src/server.ts"
   },
   "devDependencies": {
     "@types/node": "^18.11.19",
@@ -12,6 +12,7 @@
     "@typescript-eslint/parser": "^5.51.0",
     "eslint": "^8.33.0",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   },
   "dependencies": {
